apex-mdapi/src/objects/News__c.object
<CustomObject>
    <description>News Used in B2B Commerce</description>
    <fields>
        <fullName>CarouselOrder__c</fullName>
        <label>Carousel Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Layout__c</fullName>
        <defaultValue>&apos;Center&apos;</defaultValue>
        <label>Layout</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Left</fullName>
                </value>
                <value>
                    <fullName>Center</fullName>
                    <default>true</default>
                    <label>Center</label>
                </value>
                <value>
                    <fullName>Right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NewsSectionOrder__c</fullName>
        <label>News Section Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&apos;Draft&apos;</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <defaultValue>&apos;News&apos;</defaultValue>
        <label>Topic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>News</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visibility__c</fullName>
        <inlineHelpText>- Public: visible to all user (including guests)
- Private: visible to logged-in users

If it&apos;s set to private, you can resize the visibility by creating an audience.</inlineHelpText>
        <label>Visibility</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisibleCarousel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visible In Carousel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisibleNewsSection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visible In News Section</label>
        <type>Checkbox</type>
    </fields>
    <label>News</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Visibility__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>News Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>News</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>